# OpenCV-microRos-ledController

./: LICENSE  README.md
microROS_led/: platformio.ini
microROS_led/lib/led_control/: led_control.cpp  led_control.h
microROS_led/lib/ros_led/: ros_led.cpp  ros_led.h
microROS_led/src/: main.cpp
opencv_led/: package.xml  requirements.txt  setup.cfg  setup.py
opencv_led/launch/: opencv_led.launch.py
opencv_led/opencv_led/: fingerCounter.py  handTrackingModule.py
