<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_led</name>
  <version>1.0.0</version>
  <description>This package is a publisher to a micro-ros node that receives 0 or 1 to blink a led, the status is given by the number of fingers</description>
  <maintainer email="miguel_gonzalezr@ieee.org">Miguel Gonzalez</maintainer>
  <license>BSD-3</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
